ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__fix_broken_pass_args_rg_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (14) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (15) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (16) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Block(29121)};
\node[font=\tiny] at (-1.5, 0.5) {Block(29121)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] at (-1.5, 2.5) {Return([1])};
\node[font=\tiny] at (-1.5, 2.5) {Return([1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (0) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (9, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (9, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (4) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (5) at (8, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (6) at (8, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (7) at (8, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (7, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (7, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (7, 6) { };
\node[font=\tiny] at (5.5, 0.5) {Block(0)};
\node[font=\tiny] at (5.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] at (5.5, 2.5) {Store(1, 0.0, 0)};
\node[font=\tiny] at (5.5, 3.5) {BinOp(60, 59, 5)};
\node[font=\tiny] at (5.5, 4.5) {Call(959, [60], [61])};
\node[font=\tiny] at (5.5, 5.5) {Return([])};
		\path[->, blue] (14) [loop right] edge  node { } (14);
		\path[->, blue] (14) [bend right] edge  node { } (15);
		\path[->, blue] (14) [bend right] edge  node { } (16);
		\path[->, blue] (17) [loop right] edge  node { } (17);
		\path[->, blue] (17) [bend right] edge  node { } (18);
		\path[->, blue] (17) [bend right] edge  node { } (19);
		\path[->, blue] (17) [bend right] edge  node { } (20);
		\path[->, blue] (8) [bend right] edge  node { } (0);
		\path[->, blue] (8) [bend right] edge  node { } (1);
		\path[->, blue] (8) [bend right] edge  node { } (2);
		\path[->, blue] (8) [bend right] edge  node { } (3);
		\path[->, blue] (8) [bend right] edge  node { } (4);
		\path[->, blue] (8) [bend right] edge  node { } (5);
		\path[->, blue] (8) [bend right] edge  node { } (6);
		\path[->, blue] (8) [bend right] edge  node { } (7);
		\path[->, blue] (8) [loop right] edge  node { } (8);
		\path[->, blue] (8) [bend right] edge  node { } (9);
		\path[->, blue] (8) [bend right] edge  node { } (10);
		\path[->, blue] (8) [bend right] edge  node { } (11);
		\path[->, blue] (8) [bend right] edge  node { } (12);
		\path[->, blue] (8) [bend right] edge  node { } (13);


                \end{tikzpicture}
            \end{document}
