ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_early_return_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (15) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (17) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (22) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (23) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (24) at (2, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytestfoo, [0], [2])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Call(mytestfoo, [0], [3])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (18) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (32) at (7, 2) { };
\node[font=\tiny] (note_7) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_8) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_9) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_10) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_14) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_15) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_16) at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_17) at (4.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (16) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (10, 3) { };
\node[font=\tiny] (note_4) at (8.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_5) at (8.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_6) at (8.5, 2.5) {Return([1])};
\node[font=\tiny] (note_11) at (8.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_12) at (8.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_13) at (8.5, 2.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (26);
		\path[->, blue] (1) [bend right] edge  node { } (27);
		\path[->, blue] (1) [bend right] edge  node { } (28);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (2) [bend right] edge  node { } (30);
		\path[->, blue] (2) [bend right] edge  node { } (31);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (5) [loop right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (19);
		\path[->, blue] (5) [bend right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (21);
		\path[->, blue] (5) [bend right] edge  node { } (32);
		\path[->, blue] (0) [bend right] edge  node { } (22);
		\path[->, blue] (0) [bend right] edge  node { } (23);
		\path[->, blue] (0) [bend right] edge  node { } (24);


                \end{tikzpicture}
            \end{document}
