ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_global_get_and_set_multiple_functions_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 3) { };
\node[font=\tiny] (note_7) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_8) at (-1.5, 1.5) {Const(-2, 1.0)};
\node[font=\tiny] (note_9) at (-1.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (4, 2) { };
\node[font=\tiny] (note_5) at (2.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] (note_6) at (2.5, 1.5) {Return([0])};
\node[font=\tiny] (note_10) at (2.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] (note_11) at (2.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (8, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (8, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (17) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (18) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (19) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (20) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (21) at (9, 4) { };
\node[font=\tiny] (note_0) at (6.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] (note_1) at (6.5, 1.5) {Assign(-2, 1)};
\node[font=\tiny] (note_2) at (6.5, 2.5) {Const(2, 1.0)};
\node[font=\tiny] (note_3) at (6.5, 3.5) {Call(1, [2], [0])};
\node[font=\tiny] (note_4) at (6.5, 4.5) {Call(2, [], [1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (11);
		\path[->, blue] (1) [bend right] edge  node { } (12);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (2) [bend right] edge  node { } (14);
		\path[->, blue] (2) [bend right] edge  node { } (15);
		\path[->, blue] (2) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (19);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (21);


                \end{tikzpicture}
            \end{document}
